# torgi-parser

./: Cargo.toml  readme.md
src/: main.rs  router.rs
src/cian/: cian_api.rs  cian_router.rs  cian_types.rs  mod.rs
src/tests/: mod.rs
src/tests/torgi/: test_search.rs
src/torgi/: mod.rs  torgi_api.rs  torgi_router.rs  torgi_types.rs
