[package]
name = "torgi-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "*", features = ["full", "test-util"]}
actix-web = { version = "4", features = []}
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133", features = []}
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0.94"
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"